<resources>
    <!-- Non-Translatable -->
    <string name="app_name" translatable="false">AppLock</string>
    <string name="module_author_link" translatable="false">https://github.com/Mufanc</string>
    <string name="project_url_summary" translatable="false">https://github.com/Mufanc/AppLock</string>
    <string name="module_author_summary" translatable="false">Mufanc</string>

    <!-- Dashboard Fragment  -->
    <string name="miui_version_title">MIUI version</string>
    <string name="module_activated">Module is activated</string>
    <string name="module_not_activated">Module not activated</string>
    <string name="process_manager_found">Found \"ProcessManager\" service</string>
    <string name="process_manager_not_found">\"ProcessManager\" service not found</string>
    <string name="hooker_working">The hook is working normally</string>
    <string name="hooker_no_reply">Hook unresponsive</string>
    <string name="require_reboot">Need to reboot</string>
    <string name="core_version_not_match">Detected module and core version mismatch, some functions may not work properly, please reboot your phone first!</string>
    <string name="reboot_now">Reboot now</string>
    <string name="reboot_later">Later</string>
    <string name="shizuku_granted">Shizuku Authorized</string>s
    <string name="shizuku_denied">Shizuku Unauthorized</string>

    <!-- Scope Fragment  -->
    <string name="scope_saved">Saved successfully</string>

    <!-- Settings Fragment  -->
    <string name="category_settings">Settings</string>
    <string name="hide_icon_title">Hide desktop icon</string>
    <string name="hide_icon_summary">Don\'t show icon in launcher</string>
    <string name="resolve_mode_title">Way to get application list</string>
    <string name="resolve_mode_category_launcher">Apps with desktop launcher</string>
    <string name="resolve_mode_non_system_apps">Non-system apps</string>
    <string name="resolve_mode_all_apps">All apps (use carefully)</string>
    <string name="work_mode_title">Working Mode</string>
    <string name="work_mode_xposed">Xposed</string>
    <string name="work_mode_shizuku">Shizuku (Beta)</string>
    <string name="kill_level_title">Anti-kill level</string>
    <string name="kill_level_trim_memory">(General) Trim memory</string>
    <string name="kill_level_none">(Strong) Do nothing</string>
    <string name="category_backup_restore">Backup &amp; Restore</string>
    <string name="backup_settings_title">Backup</string>
    <string name="backup_settings_summary">Backup settings of AppLock</string>
    <string name="restore_settings_title">Restore</string>
    <string name="restore_settings_summary">Restore settings of AppLock</string>
    <string name="invalid_backup">The file is damaged!</string>
    <string name="imported_scope">The legacy scope has been successfully imported.</string>
    <string name="dismiss">Close</string>
    <string name="cancel">Cancel</string>
    <string name="category_about">About</string>
    <string name="module_author_title">Developer</string>
    <string name="project_url_title">Project URL</string>
    <string name="license_title">Open source licenses</string>
    <string name="license_summary">Click to show</string>
    <string name="theme_color_title">Theme</string>
    <string name="theme_color_summary">Choose an element you like!</string>
    <string name="require_api_31">Require Android 12+</string>

    <!-- Others -->
    <string name="module_desc">Prevent the app from being killed by side sliding or cleaned up with one click in recents menu.\nTranslated by tg @majestics_translation</string>
    <string name="title_dashboard">AppLock</string>
    <string name="title_scope">Scope</string>
    <string name="title_settings">Settings</string>
</resources>
