<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/category_settings">

        <mufanc.tools.applock.ui.widget.MaterialListPreference
            app:key="work_mode"
            app:icon="@drawable/ic_work_mode"
            app:title="@string/work_mode_title"
            app:entries="@array/work_mode_entries"
            app:entryValues="@array/work_mode_values" />

        <SwitchPreferenceCompat app:key="hide_icon"
            app:icon="@drawable/ic_hide_icon"
            app:title="@string/hide_icon_title"
            app:summary="@string/hide_icon_summary" />

        <mufanc.tools.applock.ui.widget.MaterialListPreference
            app:key="resolve_mode"
            app:icon="@drawable/ic_resolve_mode"
            app:title="@string/resolve_mode_title"
            app:entries="@array/resolve_mode_entries"
            app:entryValues="@array/resolve_mode_values" />

        <Preference app:key="backup_scope"
            app:icon="@drawable/ic_backup"
            app:title="@string/backup_scope_title"
            android:summary="@string/backup_scope_summary" />

        <Preference app:key="restore_scope"
            app:icon="@drawable/ic_restore"
            app:title="@string/restore_scope_title"
            android:summary="@string/restore_scope_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_about">

        <Preference app:key="author"
            app:icon="@drawable/ic_module_author"
            app:title="@string/module_author_title"
            app:summary="@string/module_author_summary" />

        <Preference app:key="project_url"
            app:icon="@drawable/ic_project_url"
            app:title="@string/project_url_title"
            app:summary="@string/project_url_summary" />

        <Preference app:key="license"
            app:icon="@drawable/ic_license"
            app:title="@string/license_title"
            app:summary="@string/license_summary" />

    </PreferenceCategory>

</PreferenceScreen>